--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -198,6 +198,7 @@
   "communityInvitation": "Uitnodiging voor Community",
   "communityJoin": "Word lid van de Community",
   "communityJoinDescription": "Weet je zeker dat je lid wilt worden van {community_name}?",
+  "communityJoinError": "Het is niet gelukt om lid te worden van de community",
   "communityJoinOfficial": "Of neem deel aan een van deze...",
   "communityJoined": "Lid geworden van de Community",
   "communityJoinedAlready": "Je bent al bij deze community aangesloten.",
@@ -391,6 +392,7 @@
   "groupInviteSending": "Groepsuitnodiging aan het versturen",
   "groupInviteSent": "Uitnodiging verzonden",
   "groupInviteSuccessful": "Groepsuitnodiging succesvol",
+  "groupInviteVersion": "Gebruikers moeten de nieuwste versie hebben om uitnodigingen te ontvangen",
   "groupInviteYou": "<b>U</b> bent uitgenodigd om lid te worden van de groep.",
   "groupInviteYouAndMoreNew": "<b>Jij</b> en <b>{count} anderen</b> zijn lid geworden van de groep.",
   "groupInviteYouAndOtherNew": "<b>Jij</b> en <b>{other_name}</b> zijn lid geworden van de groep.",
@@ -433,7 +435,7 @@
   "groupRemovedMultiple": "<b>{name}</b> en <b>{count} anderen</b> zijn verwijderd uit de groep.",
   "groupRemovedTwo": "<b>{name}</b> en <b>{other_name}</b> zijn verwijderd uit de groep.",
   "groupRemovedYou": "Je bent verwijderd uit <b>{group_name}</b>.",
-  "groupRemovedYouMultiple": "Control message that displays in the conversation when user and other member are removed from the group.",
+  "groupRemovedYouMultiple": "<b>Jij</b> en <b>{count} anderen</b> werden uit de groep verwijderd.",
   "groupRemovedYouTwo": "<b>U</b> en <b>{other_name}</b> zijn verwijderd uit de groep.",
   "groupSetDisplayPicture": "Groepsfoto instellen",
   "groupUnknown": "Onbekende groep",
